@@ -470,8 +470,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2017 Michal Špaček
-     BSD 2-Clause License
+    © 2017 Michal Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.04
