@@ -1,6 +1,7 @@
 0.04
  - Add LICENSE file.
  - Fix err_print() to ANSI output.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update to new Module::Install.
 
 0.03 2017-04-02T19:38:25+02:00
